It compiles and simplified //par version executes.